namespace Fortuna.Domain.Abstractions;

public interface IAggregateRoot
{
}
