namespace Fortuna.Domain.Accounts;

public enum BankAccountType
{
    Standard = 1,
    Prestige = 2,
    Savings = 3
}
