namespace Fortuna.Domain.Cards;

public enum CardType
{
    Debit = 1,
    Credit = 2
}
