namespace Fortuna.Domain.Loans;

public enum LoanType
{
    Cash = 1,
    Consumer = 2
}
