namespace Fortuna.Domain.Products;

public enum ProductCategory
{
    BankAccount = 1,
    Card = 2,
    Loan = 3
}
