namespace Fortuna.Domain.Products;

public enum ProductStatus
{
    Active = 1,
    Blocked = 2,
    Closed = 3
}
