namespace Fortuna.Domain.Accounts;

public enum TransactionType
{
    Credit = 1,
    Debit = 2
}
