namespace Fortuna.Domain.Customers;

public enum CustomerType
{
    Normal = 1,
    Prestige = 2
}
