namespace Fortuna.Domain.Transfers;

public enum TransferStatus
{
    Pending = 1,
    Completed = 2,
    Failed = 3
}
