namespace Fortuna.Domain.Transfers;

public enum TransferType
{
    Own = 1,
    External = 2
}
